Added tests and logging