@@ -1,11 +1,15 @@
 package org.R4ZXRN3T;
 
 import org.json.JSONObject;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.swing.*;
 import java.awt.*;
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -17,6 +21,7 @@ import java.util.Map;
 class Updater {
 	private static final String REPO_URL = "https://api.github.com/repos/R4ZXRN3T/Firstpass-password-manager/releases/latest";
 	private static final String DOWNLOAD_URL = "https://github.com/R4ZXRN3T/Firstpass-password-manager/releases/download/";
+	private static final Logger logger = LoggerFactory.getLogger(Updater.class);
 	private static boolean portableVersion = false;
 	private static Firstpass firstpassInstance = null;
 
@@ -35,13 +40,14 @@ class Updater {
 		String latestVersion = null;
 
 		try {
-			URL url = new URL(REPO_URL);
+			URL url = new URI(REPO_URL).toURL();
 			HttpURLConnection conn = (HttpURLConnection) url.openConnection();
 			conn.setRequestMethod("GET");
 			conn.setRequestProperty("Accept", "application/vnd.github.v3+json");
 
 			if (conn.getResponseCode() != 200) {
 				JOptionPane.showMessageDialog(null, "Github Version Not Found", "Error", JOptionPane.ERROR_MESSAGE);
+				logger.error("Failed to check for updates: HTTP error code : {}", conn.getResponseCode());
 				throw new RuntimeException("Failed : HTTP error code : " + conn.getResponseCode());
 			}
 
@@ -56,7 +62,8 @@ class Updater {
 			JSONObject jsonResponse = new JSONObject(sb.toString());
 			latestVersion = jsonResponse.getString("tag_name");
 		} catch (Exception e) {
-			e.printStackTrace();
+			logger.error("Error checking for updates: {}", e.getMessage());
+			IO.println("Error checking for updates: " + e.getMessage());
 			if (showError)
 				JOptionPane.showMessageDialog(null, "<html>Update check failed.<br>Please check your internet connection</html>", "Error", JOptionPane.ERROR_MESSAGE);
 		}
@@ -97,13 +104,13 @@ class Updater {
 					String link = DOWNLOAD_URL + newestVersion + "/" + getFileName();
 					String fileName = portableVersion ? "Firstpass_portable.jar.tmp" : "Firstpass_setup.msi.tmp";
 
-					URL url = new URL(link);
+					URL url = new URI(link).toURL();
 					HttpURLConnection http = (HttpURLConnection) url.openConnection();
 
 					Map<String, List<String>> header = http.getHeaderFields();
 					while (isRedirected(header)) {
 						link = header.get("Location").getFirst();
-						url = new URL(link);
+						url = new URI(link).toURL();
 						http = (HttpURLConnection) url.openConnection();
 						header = http.getHeaderFields();
 					}
@@ -128,7 +135,7 @@ class Updater {
 					if (firstpassInstance != null) firstpassInstance.save();
 					updateFrame.dispose();
 					installUpdate();
-				} catch (IOException e) {
+				} catch (IOException | URISyntaxException e) {
 					throw new RuntimeException(e);
 				}
 			}).start();
@@ -147,7 +154,8 @@ class Updater {
 				new ProcessBuilder("cmd", "/c", "start", filePath + "/Firstpass_setup.exe").start();
 				System.exit(0);
 			} catch (IOException e) {
-				e.printStackTrace();
+				logger.error("Failed to start installer: {}", e.getMessage());
+				IO.println("Failed to start installer: " + e.getMessage());
 				JOptionPane.showMessageDialog(null, "Failed to install update.\nPlease contact the developer if this issue persists", "Error", JOptionPane.ERROR_MESSAGE);
 			}
 		}
@@ -182,7 +190,8 @@ class Updater {
 			}
 			System.exit(0);
 		} catch (IOException e) {
-			e.printStackTrace();
+			logger.error("Failed to schedule update: {}", e.getMessage());
+			IO.println("Failed to schedule update: " + e.getMessage());
 			JOptionPane.showMessageDialog(null, "Failed to schedule update.\nPlease contact the developer if this issue persists", "Error", JOptionPane.ERROR_MESSAGE);
 		}
 	}
